--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,15 @@ body {
 
 .logo img {
   height: 55px;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+
+.logo span {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #f2e2d2;
+  vertical-align: middle;
 }
 
 .nav-links a {
@@ -91,8 +100,8 @@ body {
   font-size: 1.4rem;
   font-weight: 400;
   letter-spacing: 1px;
-  color: #f8e9d5;    /* lighter cream so it stands out */
-  margin-bottom: 2.5rem; /* extra space before button */
+  color: #f8e9d5;
+  margin-bottom: 2.5rem;
 }
 
 .btn {
@@ -106,18 +115,7 @@ body {
   letter-spacing: 1px;
   display: inline-block;
   margin-top: 1rem;
-  z-index: 10;
 }
-
-/* Alternative: pin button at bottom of hero 
-.btn {
-  position: absolute;
-  bottom: 1.5rem;
-  left: 50%;
-  transform: translateX(-50%);
-  margin-top: 0;
-}
-*/
 
 .btn:hover {
   background: rgb(73, 115, 182);
