--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between; 
-  max-width: 1200px;
+  width: 100% ;
   margin: 0 auto;
   padding: 0.5rem 1rem;
 }
